# rdenadai.com.br

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: app.py  data.py  rss.py  schema.py  utils.py
static/: index.js  style.css
static/highlight/: highlight.min.js
static/pages/: README.md  about.md  essays.json
static/pages/essays/1/: README.md
static/pages/essays/10/: index.md
static/pages/essays/11/: README.md
static/pages/essays/12/: README.md  index.md
static/pages/essays/13/: index.md
static/pages/essays/14/: README.md  index.md
static/pages/essays/15/: README.md
static/pages/essays/16/: README.md
static/pages/essays/17/: README.md
static/pages/essays/18/: README.md
static/pages/essays/19/: README.md
static/pages/essays/2/: README.md
static/pages/essays/20/: README.md
static/pages/essays/21/: README.md
static/pages/essays/22/: README.md
static/pages/essays/23/: README.md
static/pages/essays/24/: README.md  README.pt-BR.md
static/pages/essays/25/: README.md
static/pages/essays/26/: README.md  README.pt-BR.md
static/pages/essays/27/: README.md
static/pages/essays/28/: README.md  README.pt-BR.md
static/pages/essays/29/: README.md  README.pt-BR.md
static/pages/essays/3/: README.md
static/pages/profile/: README.md  index.md
static/pages/references/: README.md
static/pages/resume/: README.md
templates/: base.html
templates/pages/: error.html  essay.html  essays.html  index.html  profile.html  references.html  resume.html
templates/pages/ai-hype-sanity-check/: index.html  profile.html
(+6 files in other folders)
