[project]
name = "rdenadai.com.br"
version = "0.1.0"
description = "Rodolfo De Nadai personal site"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.2",
    "markdown>=3.7",
    "orjson>=3.10.7",
    "starlette[full]>=0.38.5",
    "uvicorn[standard]>=0.30.6",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.5",
]
